#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([exodus],[11.6.1],[steve.bush@neosys.com])
AC_CONFIG_HEADERS([config.h])
#AC_CONFIG_MACRO_DIR(m4)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([libexodus
                   libpgexodus])
AC_OUTPUT
