[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exodus-lexers"
version = "0.0.0"
description = "Pygments lexer for Exodus C++"
requires-python = ">=3.8"
dependencies = ["pygments"]

[project.entry-points."pygments.lexers"]
exoduscpp = "exodus_cpp:ExodusCppLexer"

[tool.setuptools]
py-modules = ["exodus_cpp"]
